--- a/Lecture 4 Examples.ipynb
+++ b/Lecture 4 Examples.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "4c53d59f",
    "metadata": {},
    "outputs": [
@@ -134,6 +134,7 @@
     }
    ],
    "source": [
+    "#Using if else in list comprehension\n",
     "fruits = [\"apple\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
     "print(fruits)\n",
     "\n",
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d64427d7",
    "metadata": {},
    "outputs": [
@@ -157,6 +158,7 @@
     }
    ],
    "source": [
+    "#Sorting a list in descending order\n",
     "list = [\"42\", \"15\", \"88\", \"12\", \"12\"]\n",
     "\n",
     "list.sort(reverse = True)\n",
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "b2246906",
    "metadata": {},
    "outputs": [
@@ -179,6 +181,7 @@
     }
    ],
    "source": [
+    "#Sorting a list ignoring case sensitivity\n",
     "fruits = [\"Apple\", \"banana\", \"Cherry\", \"kiwi\", \"Mango\"]\n",
     "fruits.sort(key = str.lower)\n",
     "\n",
@@ -187,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "c7bcec71",
    "metadata": {},
    "outputs": [
@@ -200,6 +203,7 @@
     }
    ],
    "source": [
+    "#Appending an item to the end of the list\n",
     "fruits = [\"apple\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
     "\n",
     "fruits.append(\"papeya\")\n",
@@ -209,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "id": "8d14696f",
    "metadata": {},
    "outputs": [
@@ -222,6 +226,7 @@
     }
    ],
    "source": [
+    "#Removing an item from the list\n",
     "fruits = [\"apple\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
     "\n",
     "fruits.clear()\n",
@@ -231,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "22576e05",
    "metadata": {},
    "outputs": [
@@ -245,6 +250,7 @@
     }
    ],
    "source": [
+    "#Count how many times an item occurs in a list and find the index of an item in a list\n",
     "fruits = [\"apple\", \"banana\",\"banana\", \"banana\", \"banana\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
     "\n",
     "print(fruits.count(\"banana\"))\n",
@@ -254,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "49adcbeb",
    "metadata": {},
    "outputs": [
@@ -267,6 +273,7 @@
     }
    ],
    "source": [
+    "#Inserting an item at the specified index\n",
     "fruits = [\"apple\", \"banana\", \"cherry\", \"kiwi\", \"mango\"]\n",
     "\n",
     "fruits.insert(1, \"pear\")\n",
@@ -276,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "e5be581f",
    "metadata": {},
    "outputs": [
@@ -291,6 +298,7 @@
     }
    ],
    "source": [
+    "#Unpacking a list or tuple\n",
     "fruits = (\"apple\", \"mango\", \"papaya\", \"pineapple\", \"cherry\")\n",
     "(green, *tropic, red) = fruits\n",
     "\n",
@@ -301,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "898744d4",
    "metadata": {},
    "outputs": [
@@ -316,6 +324,7 @@
     }
    ],
    "source": [
+    "#Looping through a tuple using index number\n",
     "tuple = (\"apple\", \"banana\", \"orange\")\n",
     "\n",
     "for i in range(len(tuple)) :\n",
@@ -324,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "d14126db",
    "metadata": {},
    "outputs": [
@@ -339,6 +348,7 @@
     }
    ],
    "source": [
+    "#Looping through a tuple using index number\n",
     "tuple = (\"apple\", \"banana\", \"orange\")\n",
     "\n",
     "for i in range(len(tuple)) :\n",
@@ -347,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "97a98db9",
    "metadata": {},
    "outputs": [
@@ -362,6 +372,7 @@
     }
    ],
    "source": [
+    "#Looping through a tuple using index number with while loop\n",
     "tuple = (\"apple\", \"banana\", \"orange\")\n",
     "\n",
     "i = 0\n",
@@ -374,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "d924907d",
    "metadata": {},
    "outputs": [
@@ -391,6 +402,7 @@
     }
    ],
    "source": [
+    "#Looping through a tuple using index number with while loop\n",
     "i = 1\n",
     "\n",
     "while i < 6:\n",
@@ -400,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "557c34ef",
    "metadata": {},
    "outputs": [
@@ -457,6 +469,7 @@
     }
    ],
    "source": [
+    "#Looping through a tuple using index number with while loop and break statement\n",
     "i = 0\n",
     "\n",
     "while i < 60:\n",
@@ -470,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "89504714",
    "metadata": {},
    "outputs": [
@@ -493,6 +506,7 @@
     }
    ],
    "source": [
+    "#Looping through a tuple using index number with while loop and continue statement\n",
     "i = 0\n",
     "\n",
     "while i < 60:\n",
@@ -507,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "cedfe5ee",
    "metadata": {},
    "outputs": [
@@ -521,6 +535,7 @@
     }
    ],
    "source": [
+    "#Looping through a list and using break statement\n",
     "fruits = [\"apple\", \"banana\", \"orange\",\"kiwi\", \"pineapple\",\"watermelon\"]\n",
     "\n",
     "for x in fruits :\n",
@@ -532,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "53c3fce4",
    "metadata": {},
    "outputs": [
@@ -547,6 +562,7 @@
     }
    ],
    "source": [
+    "#Looping through a list and using break statement\n",
     "fruits = [\"apple\", \"banana\", \"orange\",\"kiwi\", \"pineapple\",\"watermelon\"]\n",
     "\n",
     "for x in fruits :\n",
@@ -557,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "id": "cfe2e56e",
    "metadata": {},
    "outputs": [
@@ -578,6 +594,7 @@
     }
    ],
    "source": [
+    "#Nested loops\n",
     "krish = [\"1\", \"2\", \"3\"]\n",
     "fcb = [\"apple\", \"banana\", \"orange\"]\n",
     "\n",
